objects/Google_Canada_Feed__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>dbu_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Not Orderable</fullName>
                </value>
                <value>
                    <fullName>In Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>additional_image_link__c</fullName>
        <label>dbu_additional_image_link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>availability__c</fullName>
        <label>dbu_availability</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>brand__c</fullName>
        <label>dbu_brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>condition__c</fullName>
        <label>dbu_condition</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>dbu_description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>dbu_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>image_link__c</fullName>
        <label>dbu_image_link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <label>dbu_link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mpn__c</fullName>
        <label>dbu_mpn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>dbu_price</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sale_price__c</fullName>
        <label>dbu_sale_price</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_weight__c</fullName>
        <label>dbu_shipping_weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>dbu_title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>dbu_Google Canada Feed</label>
    <nameField>
        <displayFormat>GCF-{0000}</displayFormat>
        <label>Google Canada Feed Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dbu_Google Canada Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>